--- a/c_project_01/code/css/src/main_v4.css
+++ b/c_project_01/code/css/src/main_v4.css
@@ -1,3 +1,7 @@
 /* main_v4.css */
 
 @import url("../common/variable.css");
+@import url("../main_page/b_smartphone.css");
+@import url("../main_page/c_tablet.css");
+@import url("../main_page/d_laptop.css");
+@import url("../main_page/e_pc.css");
