--- a/c_project_01/code/css/common/common.css
+++ b/c_project_01/code/css/common/common.css
@@ -6,8 +6,11 @@
 .none {display: none;}
 
 .max_width_01 { 
-  width:95%; min-width:940px; max-width:1280px;  
-  margin:auto;}
+  width:95%; min-width:940px; max-width:1280px; margin:auto;}
+
+@media screen and (max-width:939px) {
+  .max_width_01 { width:auto; min-width: auto;}
+}
 
 .first_margin > li:first-child { margin-left: 0; }
 .last_margin > li:last-child { margin-right: 0; }
