--- a/c_project_01/code/css/main_page/e_pc.css
+++ b/c_project_01/code/css/main_page/e_pc.css
@@ -8,7 +8,65 @@
     height:auto; min-height:auto;
     margin:auto; padding-top:0;
   }
+/* #headBox __________________________________________ */
+#headBox { 
+  /* position: fixed; top: 0; left:0; z-index:1500; */
+  width: 100%; height: 100px; 
+  /* padding:20px 50px 10px; box-sizing: border-box; */
+  background-color: #fff; 
+}
+#headBox > * {display: none;}
 
+/* #slideBox __________________________________________ */
+#slideBox   { 
+position: relative;
+width: 100%; height: 600px; box-sizing: border-box;
+background-color: #aaa; }
+
+/* #newBox ____________________________________________  */
+#newBox { 
+position: relative;
+width: 100%; height:700px; 
+padding-top:62px; box-sizing: border-box;
+/* background-color: #eee;  */
+}
+
+/* #subBox ____________________________________________  */
+#subBox     { 
+position: relative;
+width: 100%; height: 350px; 
+/* padding-top:50px; box-sizing: border-box; */
+/* background-color: #aaa;  */
+background-color: #ffbd55; 
+}
+
+/* #bestBox ____________________________________________  */
+#bestBox { 
+width: 100%; height: 700px; 
+padding-top:175px; box-sizing: border-box; 
+}
+
+/* #galleryBox ____________________________________________  */
+#galleryBox {   
+width: 100%; height: 750px; 
+padding-top: 75px; box-sizing: border-box;
+/* background-color: #ccc;  */
+background-color: rgba(255, 189, 85, 0.2);
+}
+
+/* #sponsorBox ____________________________________________  */
+#sponsorBox { 
+width: 100%; height: 100px; 
+/* padding:10px 0; box-sizing: border-box; */
+/* background-color: #999;  */
+}
+
+/* #footBox ____________________________________________  */
+#footBox    { 
+width: 100%; height: 450px; 
+padding-top: 68px; box-sizing: border-box;
+background-color: #333; 
+}
 
 }/* @media screen and (min-width:1440px) */
 
